--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>CSUN_DAS_Server</title>
+    <title>DAS_Server_SignalR</title>
   </head>
   <body class="background">
     <noscript>
